--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://seung365.github.io/react-deploy/",
   "name": "kakao-tech-campus-frontend-project",
   "version": "0.1.0",
   "private": true,
@@ -87,5 +86,6 @@
   },
   "overrides": {
     "react-refresh": "0.11.0"
-  }
+  },
+  "homepage": "https://seung365.github.io/react-deploy"
 }
