--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,3 +46,18 @@ jobs:
 
       - name: Run Test
         run: npm test
+    deploy:
+      needs: [build, test] # build와 test가 성공적으로 완료된 후에만 실행
+      runs-on: ubuntu-latest
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' # main 브랜치에 push될 때만 실행
+
+      steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v2
+
+        - name: Deploy to Production
+          run: |
+            # 여기에 배포 스크립트를 추가
+            # 예: npm run deploy
+          env:
+            # 필요한 환경 변수들 설정
