--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,11 @@ on:
   pull_request:
     branches:
       - main
-    # paths: # path는 특정 폴더에 변경사항이 생겼을 때 작동하도록 설정할 수 있음
-    #   - "services/**"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' # main 브랜치일 때만 실행
 
     steps:
       - name: Checkout Repository
@@ -31,6 +30,7 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' # main 브랜치일 때만 실행
 
     steps:
       - name: Checkout Repository
@@ -48,15 +48,16 @@ jobs:
         run: npm test
 
   deploy:
-    needs: [build, test] # build와 test가 성공적으로 완료된 후에만 실행
+    needs: [build, test]
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' # main 브랜치에 push될 때만 실행
+    if: github.ref == 'refs/heads/main' # main 브랜치일 때만 실행
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Deploy to Production
-        run: |
-          # 여기에 배포 스크립트를 추가
-          # 예: npm run deploy
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build # 빌드된 파일이 있는 디렉터리
